refactor: 필드명 변경